[package]
name = "jpe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[package.metadata.maturin]
name = "jpe_python_ffi"

[dependencies.pyo3]
version = "0.25.0"

[dependencies]
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["display"] }
serial2 = "0.2.29"
serial2-tokio = "0.1.16"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["io-util", "net", "time"] }

[dev-dependencies]
uuid = { version="1.17.0", features=["v4"] }
serial2 = { version = "0.2.29", features = ["unix"]}
