[package]
name = "jpe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sync"]

pyo3-ext = ["pyo3/extension-module"]

sync = ["pyo3-ext", "dep:pyo3", "dep:serial2"]
async = ["dep:tokio", "dep:serial2-tokio"]

[dependencies]
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["display"] }
thiserror = "2.0.12"

# Optional Deps
pyo3 = { version = "0.25.0", optional = true }
serial2 = { version = "0.2.29", optional = true }
serial2-tokio = { version = "0.1.16", optional = true }
tokio = { version = "1.47.0", optional = true, features = ["io-util", "net", "time", "macros", "rt-multi-thread"] }

[package.metadata.maturin]
name = "jpe_python_ffi"

[dev-dependencies]
uuid = { version="1.17.0", features=["v4"] }
serial2 = { version = "0.2.29", features = ["unix"]}
